fix multi-line entries on mobile, update tagline

--- a/assets/css/dbg-style-custom.css
+++ b/assets/css/dbg-style-custom.css
@@ -1,3 +1,10 @@
 .full-img {
   max-width: 100%;
 }
+
+@media (max-width: 768px) {
+    a.button.dark {
+        display: inline-block;
+        line-height: 1.5em;
+    }
+}
